--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,9 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+/bin/
+/lib/
+/.settings/
+/fail-problems/
+/problems/
+agentzero.h2.db
